Fix bracket spacing some more

--- a/frontend/src/styles/bracket.scss
+++ b/frontend/src/styles/bracket.scss
@@ -46,11 +46,11 @@ li.game-top {
 }
 
 .round-3 li.game-spacer {
-  height: 500px;
+  height: 520px;
 }
 
 .round-4 li.game-spacer {
-  height: 1080px;
+  height: 1140px;
 }
 
 // .round-2 li.spacer {
